--- a/web/src/pshome/templates/login.html
+++ b/web/src/pshome/templates/login.html
@@ -4,14 +4,5 @@
 {%block title %}Landing {% endblock  %}
 
 {% block body %}
-<h1>
-Project Share
-    </h1>
-<br/>
-<center>
-<h1>~UserList~</h1> 
-<h2>username: {{ user }}</h2>
-<br>
-</center>
-<br>
+<h1>Login</h1>
 {% endblock %}
