--- a/web/src/pshome/templates/home.html
+++ b/web/src/pshome/templates/home.html
@@ -4,14 +4,6 @@
 {%block title %}Landing {% endblock  %}
 
 {% block body %}
-<h1>
-Project Share
-    </h1>
-<br/>
-<center>
-<h1>~UserList~</h1> 
-<h2>username: {{ user }}</h2>
-<br>
-</center>
-<br>
+<h1>Home page</h1>
+
 {% endblock %}
