--- a/CST438-Project-Share/app/src/main/res/layout/activity_register.xml
+++ b/CST438-Project-Share/app/src/main/res/layout/activity_register.xml
@@ -4,16 +4,17 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".RegisterActivity">
+    tools:context=".RegisterActivity"
+    android:gravity="center">
 
     <EditText
         android:id="@+id/Rusername"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="@string/username"
-        android:layout_marginRight="25dp"
         android:layout_marginLeft="25dp"
-        android:layout_centerInParent="true"/>
+        android:layout_marginRight="25dp"
+        android:hint="@string/username"
+        />
 
     <Spinner
         android:id="@+id/spinner1"
@@ -35,7 +36,8 @@
         android:layout_marginRight="25dp"
         android:layout_marginLeft="25dp"
         android:layout_marginTop="25dp"
-        android:layout_below="@id/spinner1" />
+        android:layout_below="@id/spinner1"
+        android:inputType="textPassword"/>
 
     <EditText
         android:id="@+id/reRpassword"
@@ -45,7 +47,8 @@
         android:layout_marginRight="25dp"
         android:layout_marginLeft="25dp"
         android:layout_marginTop="25dp"
-        android:layout_below="@id/Rpassword" />
+        android:layout_below="@id/Rpassword"
+        android:inputType="textPassword"/>
 
     <Button
         android:id="@+id/registerBtn"
