--- a/web/src/pshome/templates/base/base.html
+++ b/web/src/pshome/templates/base/base.html
@@ -7,6 +7,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Project Share {% block tabTitle %} {% endblock %}</title>
         <link rel="stylesheet" href="{% static 'styles/base.css' %}">   
+        <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous">
     </head>
 </html>
 <body>
@@ -15,8 +16,9 @@
             <ul>
                 <li><a href="/home"><span><i class="fas fa-home"></i></span>Home</a></li>     
                 <li><a href="/login"><span><i class="fas fa-home"></i></span>Login</a></li>            
-                <li><a href="/signup"><span><i class="fas fa-home"></i></span>Sign-Up</a></li>            
-                <li><a href="/"><span><i class="fas fa-home"></i></span>Logout</a></li>            
+                <li><a href="/signup"><span><i class="fas fa-home"></i></span>Sign-Up</a></li>
+                <button type="button" ><i class="fa fa-plus-circle " ></i></button>
+                <li><a href="/"><span><i class="fas fa-home"></i></span>Logout</a></li>                                
             </ul>
         </div>
     </header>
