--- a/web/src/pshome/templates/index.html
+++ b/web/src/pshome/templates/index.html
@@ -11,7 +11,9 @@ Project Share
 <center>
 <h1>~UserList~</h1> 
 <h2>username: {{ user }}</h2>
+<h1>{{ message }}</h1>
 <br>
 </center>
+
 <br>
 {% endblock %}
