--- a/CST438-Project-Share/app/src/main/res/layout/activity_login.xml
+++ b/CST438-Project-Share/app/src/main/res/layout/activity_login.xml
@@ -9,44 +9,40 @@
 
 
     <EditText
-        android:id="@+id/editText2"
+        android:id="@+id/etPassword"
         android:layout_width="180dp"
         android:layout_height="48dp"
         android:layout_below="@+id/etUsername"
         android:layout_alignParentStart="true"
         android:layout_alignParentLeft="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginStart="117dp"
-        android:layout_marginLeft="117dp"
+        android:layout_marginStart="112dp"
+        android:layout_marginLeft="112dp"
         android:layout_marginTop="45dp"
         android:hint="Password"
-        android:hintTextColor="#757575"
         android:inputType="textPassword" />
 
     <EditText
         android:id="@+id/etUsername"
         android:layout_width="180dp"
         android:layout_height="48dp"
+        android:layout_below="@+id/imageView"
         android:layout_alignParentStart="true"
         android:layout_alignParentLeft="true"
-        android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginStart="112dp"
-        android:layout_marginLeft="112dp"
-        android:layout_marginTop="416dp"
-        android:hint="Username"
-        android:hintTextColor="#757575" />
+        android:layout_marginStart="115dp"
+        android:layout_marginLeft="115dp"
+        android:layout_marginTop="45dp"
+        android:hint="Username" />
 
     <Button
         android:id="@+id/btnLogin"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentBottom="true"
+        android:layout_below="@+id/etPassword"
         android:layout_marginStart="60dp"
         android:layout_marginLeft="60dp"
-        android:layout_marginBottom="102dp"
+        android:layout_marginTop="35dp"
         android:text="Login"
         app:backgroundTint="#9116B5" />
 
@@ -54,12 +50,15 @@
         android:id="@+id/btnSignUp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentEnd="true"
+        android:layout_below="@+id/etPassword"
         android:layout_alignParentRight="true"
-        android:layout_alignParentBottom="true"
+        android:layout_marginStart="109dp"
+        android:layout_marginLeft="109dp"
+        android:layout_marginTop="35dp"
         android:layout_marginEnd="60dp"
         android:layout_marginRight="60dp"
-        android:layout_marginBottom="100dp"
+        android:layout_toEndOf="@+id/btnLogin"
+        android:layout_toRightOf="@+id/btnLogin"
         android:text="Sign Up"
         app:backgroundTint="#9116B5" />
 
@@ -71,9 +70,9 @@
         android:layout_alignParentEnd="true"
         android:layout_alignParentRight="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="100dp"
-        android:layout_marginEnd="74dp"
-        android:layout_marginRight="74dp"
+        android:layout_marginTop="45dp"
+        android:layout_marginEnd="65dp"
+        android:layout_marginRight="65dp"
         app:srcCompat="@drawable/project_share_logo" />
 
 
