--- a/CST438-Project-Share/app/src/main/res/layout/fragment_profile.xml
+++ b/CST438-Project-Share/app/src/main/res/layout/fragment_profile.xml
@@ -70,7 +70,7 @@
             android:layout_marginLeft="15dp" />
 
         <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/rvPosts"
+            android:id="@+id/rvProfile"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_below="@id/user_img"/>
