--- a/CST438-Project-Share/app/src/main/res/layout/fragment_compose.xml
+++ b/CST438-Project-Share/app/src/main/res/layout/fragment_compose.xml
@@ -10,7 +10,8 @@
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:gravity="center">
+        android:gravity="center"
+        android:background="#E7AEF7">
 
         <TextView
             android:id="@+id/projectN"
