--- a/CST438-Project-Share/app/src/main/res/layout/fragment_feed.xml
+++ b/CST438-Project-Share/app/src/main/res/layout/fragment_feed.xml
@@ -3,7 +3,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".fragments.FeedFragment">
+    tools:context=".fragments.FeedFragment"
+    android:background="#E7AEF7">
 
     <!-- TODO: Update blank fragment layout -->
     <androidx.recyclerview.widget.RecyclerView
